# guarani-lm

./: .gitignore  README.md  pyproject.toml  run_training.sh  run_training_v2.sh
configs/: eval_config.yaml  eval_v2_config.yaml  pretrain_config.yaml  pretrain_v2_config.yaml  sft_config.yaml  sft_v2_config.yaml
docs/: data_sources.md  model_card.md
eval/results/: eval_results_20260220_210359.json  eval_results_20260223_092034.json
notebooks/: 01_data_exploration.ipynb  02_tokenizer_analysis.ipynb
scripts/: augment_nllb.py  clean_culturax.py  clean_wikipedia.py  count_tokens.py  download_data.py  download_new_datasets.py  merge_datasets.py  normalize_guarani.py  prepare_instructions.py  prepare_instructions_v2.py  prepare_parallel.py  prepare_test_sets.py  tokenizer_analysis.py
src/: evaluate.py  guarani_utils.py  inference.py  prompt_templates.py  train_cpt.py  train_sft.py
tests/: test_data_pipeline.py  test_normalize.py
