[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guarani-lm"
version = "0.1.0"
description = "First open-source generative language model for Guaraní and Jopara"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "skyvanguard" },
]
keywords = ["guarani", "nlp", "language-model", "jopara", "paraguay", "low-resource"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "trl>=0.8.0",
    "sacrebleu>=2.4.0",
    "scikit-learn>=1.4.0",
    "mwxml>=0.3.3",
    "wikitextparser>=0.55.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
train = [
    "unsloth[cu121-torch240]>=2024.4",
    "bitsandbytes>=0.43.0",
    "wandb>=0.16.0",
    "flash-attn>=2.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/skyvanguard/guarani-lm"
Repository = "https://github.com/skyvanguard/guarani-lm"
Issues = "https://github.com/skyvanguard/guarani-lm/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
